# aicode

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_ROADMAP.md  README.md  ROADMAP.md  pyproject.toml
.autofix_reports/: fix_memory.jsonl
.doc_cache/: doc_index.json
.github/: copilot-instructions.md
.knowledge_base/: metrics.json  patterns.json  solutions.json  strategies.json
docs/: COMMAND_BOOK.md  COPILOT_LIKE_FLOW_BLUEPRINT.md  COPILOT_PANEL_IMPLEMENTATION_SPEC_V1.md  DEV_BOOK.md  HANDOFF_GUIDE.md  LEARNING_BASELINE_V1.md  MAINTAINER_PLAYBOOK.md  SELF_IMPROVEMENT_BASELINE_PACK_V1.md  TODAY_GAPS_AND_WEAKNESSES.md  UI_UX_REDESIGN_PLAN_V1.md
src/: app_service.py  main.py  server.py
tests/: test_actions.py  test_agent.py  test_agent_memory.py  test_agent_modes.py  test_agent_router.py  test_analytics_dashboard.py  test_api_generator.py  test_app_service.py  test_approval_policy.py  test_architecture_analyzer.py  test_architecture_diagram_understanding.py  test_audit_trail.py  test_autofix.py  test_autofix_state.py  test_budget_tracker.py  test_capabilities.py  test_chat_engine.py  test_chat_help_summary.py  test_circuit_breaker.py  test_code_reviewer.py  test_command_guard.py  test_compliance_tools.py  test_confidence.py  test_cost_optimizer.py  test_cost_postmortem.py  test_coverage_analyzer.py  test_custom_llm_support.py  test_dashboard.py  test_data_schema_analyzer.py  test_debugger.py  test_decision_timeline.py  test_dependency_resolver.py  test_diff_visualization.py  test_doc_fetcher.py  test_doc_generator.py  test_docs_assistant.py  (+67 more)
(+135 files in other folders)
