[tool.poetry]
name = "coding-ai-app"
version = "0.1.0"
description = "A coding AI program that generates and evaluates code based on prompts."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"